Correctly handle slashes when converting filters from Qt

Patch by Felix Geyer, reviewed by Albert Astals Cid
See http://reviewboard.kde.org/r/934/

BUG: 197195

svn path=/trunk/KDE/kdelibs/; revision=1001314